# python_util

./: .gitignore  .gitlab-ci.yml  .uvignore  README.md  UV_USAGE.md  pyproject.toml  requirements.txt  setup.py
.git.bfg-report/2023-10-13/18-10-47/: cache-stats.txt  object-id-map.old-new.txt
src/python_util.egg-info/: PKG-INFO  SOURCES.txt
src/python_util/collections/: collection_util.py  cyclic_registrations.py  last_n_historical_dict.py  pattern_keeping_list.py  topological_sort.py
src/python_util/concurrent/: synchronized_lock_stripe.py
src/python_util/copy_clone_util/: copy_override.py
src/python_util/delegate/: delegates.py
src/python_util/escape_util/: escape_str_util.py
src/python_util/graph_util/: graph_utils.py  random_graph_gen.py
src/python_util/io_utils/: file_dirs.py  io.py  (+3 more)
test/: out
test/collections_tests/: test_collection_util.py  test_cyclical_registrations.py  test_last_n_historical_dict.py  test_pattern_finder.py  test_semaphore_permit_mgr.py  test_topological_sort.py
test/copy_clone_util_tests/: test_copy_override.py
test/delegate_tests/: delegate_fixutres.py  test_delegates.py
test/download_collection/: download_gaia.py  download_hf.py
test/io_utils_tests/: test_file_dirs.py  test_file_streamer.py  test_io.py
test/logger_tests/: FluentDLoggerTest.py
test/reflection_util_tests/: test_reflection_util.py
test/torch_utils_tests/: complex_test.py  convert_to_adjacencies_test.py  graph_tests.py  test_masking_padding.py  test_pytorch_util.py  test_rolling_avg.py  test_split_sequences.py  test_top_bottom_k_sparse.py
(+30 files in other folders)
